# SensCalibr8

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  DESIGN.md  FEATURES.md  PROGRESS.md  README.md  RESEARCH.md  RULES.md  SKILL.md
analysis/: pyproject.toml  requirements.txt
analysis/src/senscalibr8_analysis/: __init__.py  configuration.py  reporting.py
analysis/tests/: test_configuration.py  test_foundation.py  test_reporting.py
calibration/: ENVIRONMENT_INVENTORY.md  P0_R1_CALIBRATION_PROTOCOL.md  P0_R2_HARNESS_ACCEPTANCE.md  P0_R3_INPUT_TIMING_PROTOCOL.md  P0_R4_ARENA_GEOMETRY_PROTOCOL.md  P0_R5_MODE_SIGNAL_PROTOCOL.md  P0_R6_SCORING_STATISTICS_PROTOCOL.md  P0_R7_CALIBRATION_CONFIG_FREEZE.md  __init__.py
config/: continuous-cycle-v1.json  phase-three-protocol-v1.json  phase-two-protocol-v1.json  production-config-parity-v1.json  production-environment-v1.json  protocol-constants-v1.json  research-constants-v1.json  scientific-rigor-v1.json
docs/: FINAL_OPERATOR_RELEASE_HANDOFF.md  LOCAL_SETUP.md  P1_R1_PRODUCTION_FOUNDATION.md  P1_R2_CENTRAL_CONFIGURATION.md  P1_R3_SQLITE_SCHEMA_MIGRATIONS.md  P1_R4_REPOSITORIES_AND_TRANSACTIONS.md  P1_R5_DATA_INTEGRITY.md  P2_R1_CALCULATION_VALIDATION.md  P2_R2_PROFILE_LIFECYCLE.md  P2_R3_SLOT_SELECTION_SETUP_UI.md  P2_R4_LIFECYCLE_GUARDS_PERSISTENCE.md  P2_R5_ERGONOMIC_WARNINGS_DASHBOARD.md  P2_R6_PROFILE_SETUP_ACCEPTANCE.md  P3_R1_ENGINE_CONTRACTS_STATE_MACHINE.md  P3_R2_DETERMINISTIC_INPUT_TIMING.md  P3_R3_CALIBRATED_ARENA_RUNTIME.md  P3_R4_TARGET_SEQUENCING_CONFOUND_CONTROL.md  P4_R1_CLOSE_FLICK.md  (+32 more)
(+294 files in other folders)
