[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "senscalibr8-analysis"
version = "0.1.0"
description = "Offline analysis boundary for SensCalibr8"
requires-python = "==3.12.13"
dependencies = [
  "matplotlib==3.11.0",
  "numpy==2.3.5",
  "pandas==3.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
